fix(docs-infra): avoid distorting contributor images (#47215)
Ensure contributor images are not distorted.
This was accidentally broken in #46347.

PR Close #47215

--- a/aio/src/styles/2-modules/contributor/_contributor.scss
+++ b/aio/src/styles/2-modules/contributor/_contributor.scss
@@ -48,6 +48,7 @@ aio-contributor {
       width: calc(100% - 4px);
       height: calc(100% - 4px);
       clip-path: $angular-shape-polygon;
+      object-fit: cover;
     }
 
     .contributor-social-links {
